--- a/package.json
+++ b/package.json
@@ -18,10 +18,20 @@
   "homepage": "https://github.com/satird/project#readme",
   "devDependencies": {
     "browser-sync": "^2.18.8",
+    "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-browser-basedir": "^1.0.1",
     "gulp-browser-notification": "^1.0.0",
-    "gulp-plumber": "^1.1.0"
+    "gulp-cache": "^0.4.6",
+    "gulp-concat": "^2.6.1",
+    "gulp-cssnano": "^2.1.2",
+    "gulp-imagemin": "^3.2.0",
+    "gulp-less": "^3.3.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglifyjs": "^0.6.2",
+    "gulp-util": "^3.0.8",
+    "imagemin-pngquant": "^5.0.0"
   }
 }
