--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-uglifyjs": "^0.6.2",
     "gulp-util": "^3.0.8",
+    "gulp-watch": "^4.3.11",
     "imagemin-pngquant": "^5.0.0"
   }
 }
