--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/satird/project#readme",
   "devDependencies": {
+    "autoprefixer": "^6.7.7",
     "browser-sync": "^2.18.8",
+    "css-mqpacker": "^5.0.1",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
@@ -26,13 +28,23 @@
     "gulp-cache": "^0.4.6",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.2",
+    "gulp-csso": "^3.0.0",
     "gulp-imagemin": "^3.2.0",
     "gulp-less": "^3.3.0",
+    "gulp-minify-css": "^1.2.4",
     "gulp-plumber": "^1.1.0",
+    "gulp-postcss": "^6.4.0",
     "gulp-rename": "^1.2.2",
+    "gulp-rigger": "^0.5.8",
+    "gulp-sourcemaps": "^2.5.0",
+    "gulp-svgmin": "^1.2.3",
+    "gulp-svgstore": "^6.1.0",
+    "gulp-uglify": "^2.1.2",
     "gulp-uglifyjs": "^0.6.2",
     "gulp-util": "^3.0.8",
     "gulp-watch": "^4.3.11",
-    "imagemin-pngquant": "^5.0.0"
+    "imagemin-pngquant": "^5.0.0",
+    "rimraf": "^2.6.1",
+    "run-sequence": "^1.2.2"
   }
 }
